src/main/java/com/example/team_work_management/exception/error/GroupManagerCannotBeDeletedException.java
package com.example.team_work_management.exception.error;

public class GroupManagerCannotBeDeletedException extends RuntimeException{
    public GroupManagerCannotBeDeletedException(String message){
        super(message);
    }

}
